[package]
name = "prefix-jump"
version = "0.1.0"
edition = "2021"
description = "A slash command extension for the Zed editor"
authors = ["Matthew Albright <matthew.albright@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
zed_extension_api = "0.1"
async-trait = "0.1"
log = "0.4"
